tests/sksl/errors/ReservedNameInvariant.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'invariant'
1 error
